# quefi

./: .gitattributes  Cargo.toml  README.md  items.test
src/: app.rs  main.rs  spotify.rs  youtube.rs
src/app/: app_widget.rs  implementation.rs  macros.rs  widget.rs
