[package]
name = "quefi"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
tui-textarea = "0.7.0"
ratatui = "0.29.0"
rodio = "0.20.1"
regex = "1.11.1"
